@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.127 2013/01/26 12:42:53 speachy Exp $
+## $Id: Makefile.am,v 1.128 2013/07/02 11:07:18 speachy Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -84,7 +84,7 @@ sbin_SCRIPTS = cups-genppdupdate
 cupsexec_filter_PROGRAMS = rastertogutenprint.@GUTENPRINT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSION@ commandtoepson commandtocanon
 
 if BUILD_LIBUSB_BACKENDS
-cupsexec_backend_PROGRAMS = selphy kodak1400
+cupsexec_backend_PROGRAMS = selphy kodak1400 kodak6800
 endif
 
 ## CUPS backends require no world-execute permissions if they are to be
@@ -94,6 +94,7 @@ if BUILD_LIBUSB_BACKENDS
 install-exec-hook:
 	chmod 700 $(DESTDIR)$(pkglibdir)/backend/selphy
 	chmod 700 $(DESTDIR)$(pkglibdir)/backend/kodak1400
+	chmod 700 $(DESTDIR)$(pkglibdir)/backend/kodak6800
 endif
 
 
@@ -121,6 +122,10 @@ selphy_LDADD = $(LIBUSB_LIBS)
 kodak1400_SOURCES = kodak1400_print.c
 kodak1400_CPPFLAGS = $(LIBUSB_CFLAGS)
 kodak1400_LDADD = $(LIBUSB_LIBS)
+
+kodak6800_SOURCES = kodak6800_print.c
+kodak6800_CPPFLAGS = $(LIBUSB_CFLAGS)
+kodak6800_LDADD = $(LIBUSB_LIBS)
 
 cups_genppd_@GUTENPRINT_MAJOR_VERSION@_@GUTENPRINT_MINOR_VERSION@_SOURCES = genppd.c i18n.c i18n.h
 cups_genppd_@GUTENPRINT_MAJOR_VERSION@_@GUTENPRINT_MINOR_VERSION@_CFLAGS = -DALL_LINGUAS='"$(ALL_LINGUAS)"' $(BUILD_SIMPLE_PPDS) $(TRANSLATE_PPDS)
